# A2C_CUDA

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  output.txt  run.sh  show.py  show_log.py  ssh.sh
.history/src/: main_20250609100137.py  main_20250609100145.py  main_20250609100148.py  main_20250609100151.py
.history/src/algs/: a2c_20250609100131.py  a2c_20250609100247.py  a2c_20250609100304.py  model_20250609100122.py  model_20250609114831.py  model_20250609114838.py  model_20250609114841.py  model_20250628091434.py  model_20250628091436.py  model_20250628091444.py  traj_20250609100113.py  traj_20250628090659.py
src/: cpu_a2c.py  main.py  pytorch_a2c.py
src/algs/: a2c.py  a2c_torch.py  model.py  traj.py
src/lib/: mlp_ac.cu  mlp_ac.h  mlp_ac_pybind.cpp
